--- a/Taxifahrer/VorRegiViewController.xib
+++ b/Taxifahrer/VorRegiViewController.xib
@@ -41,7 +41,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{39, 13}, {235, 119}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="778925399"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -78,7 +77,6 @@ Z2VtZWluZW4gR2VzY2jDpGZ0c2JlZGluZ3VuZ2VuIGbDvHIgZGllIFRheGlEcml2ZXIgQXBwLg</stri
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{39, 153}, {243, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="772247051"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -116,7 +114,6 @@ Z2VtZWluZW4gR2VzY2jDpGZ0c2JlZGluZ3VuZ2VuIGbDvHIgZGllIFRheGlEcml2ZXIgQXBwLg</stri
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{39, 331}, {243, 41}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1010748075"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -151,7 +148,6 @@ Z2VtZWluZW4gR2VzY2jDpGZ0c2JlZGluZ3VuZ2VuIGbDvHIgZGllIFRheGlEcml2ZXIgQXBwLg</stri
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{49, 160}, {208, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="641312624"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -192,7 +188,6 @@ Z2VtZWluZW4gR2VzY2jDpGZ0c2JlZGluZ3VuZ2VuIGbDvHIgZGllIFRheGlEcml2ZXIgQXBwLg</stri
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{62, 340}, {204, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -221,7 +216,6 @@ Z2VtZWluZW4gR2VzY2jDpGZ0c2JlZGluZ3VuZ2VuIGbDvHIgZGllIFRheGlEcml2ZXIgQXBwLg</stri
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="962777780"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">2</int>
@@ -389,51 +383,7 @@ Z2VtZWluZW4gR2VzY2jDpGZ0c2JlZGluZ3VuZ2VuIGbDvHIgZGllIFRheGlEcml2ZXIgQXBwLg</stri
 			<nil key="sourceID"/>
 			<int key="maxID">98</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">VorRegiViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="buttonAGB:">id</string>
-						<string key="buttonRegi:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="buttonAGB:">
-							<string key="name">buttonAGB:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="buttonRegi:">
-							<string key="name">buttonRegi:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="lblAGBAkzeptieren">UILabel</string>
-						<string key="lblUnsereAGBs">UILabel</string>
-						<string key="lblZurRegi">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="lblAGBAkzeptieren">
-							<string key="name">lblAGBAkzeptieren</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblUnsereAGBs">
-							<string key="name">lblUnsereAGBs</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblZurRegi">
-							<string key="name">lblZurRegi</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/VorRegiViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
